# Axxess-Hackathon

./: .gitignore  README.md
level_1/: icd_test.py  pyproject.toml  refactoring_steps.md  test_clinical_pipeline.py
level_1/agent/: __init__.py  agent.py
level_1/agent/agents/: clinical_scribe.py  radiology_analyst.py  records_analyst.py
level_1/agent/services/: icd_service.py  openfda_service.py
level_1/agent/tools/: __init__.py  clinical_coding_tool.py  icd_tools.py  mcp_tools.py
level_1/mcp-server/: icd_mapper.py  main.py
level_1/setup/: setup_env.sh
level_1/tests/: test_specialist_agents.py
way-back-home/: .gitignore
way-back-home/level_1/: CLAUDE.md  pyproject.toml
way-back-home/level_1/agent/agents/: __init__.py  radiology_analyst.py  records_analyst.py
way-back-home/level_1/agent/tools/: diagnosis_tools.py  mcp_tools.py  speech_tools.py
way-back-home/level_1/mcp-server/: cloudbuild.yaml  main.py  requirements.txt
way-back-home/level_1/tests/: test_agents.py  test_mcp_tools.py
